# variant

./: .clang-format  .clang-tidy  .cppcheck-suppress  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: global.h  includes.h  main.cpp
src/core/: convars.cpp  convars.h  crc.cpp  crc.h  hooks.cpp  hooks.h  interfaces.cpp  interfaces.h  menu.cpp  menu.h  schema.cpp  schema.h  variables.h
src/core/hooks/: hooks.cpp  hooks.h
src/core/hooks/createmove/: createmove.cpp  createmove.h
src/core/hooks/cursor/: cursor.cpp  cursor.h
src/core/hooks/generateprimitives/: generateprimitives.cpp  generateprimitives.h
src/core/hooks/prediction/: prediction.cpp  prediction.h
src/core/hooks/render/: render.cpp  render.h
src/core/hooks/viewmatrix/: viewmatrix.cpp  viewmatrix.h
src/core/menu/: icons.h  menu.cpp  menu.h  theme.h
src/features/: misc.cpp  misc.h  movement.cpp  movement.h
src/features/movement/: movement.h
src/features/movement/autostrafe/: autostrafe.cpp
src/features/movement/bhop/: bhop.cpp
src/features/movement/edgebug/: edgebug.cpp
src/features/movement/jumpbug/: jumpbug.cpp
src/features/movement/validate/: validate.cpp
src/features/visuals/chams/: chams.cpp  chams.h  vmats.h
src/sdk/: const.h  entity.cpp  entity.h  entity_handle.h  entitysystem.cpp  entitysystem.h  material.h  trace.h  usercmd.cpp  usercmd.h
src/sdk/datatypes/: usercmd.h  vector.h
src/sdk/interfaces/: iengineclient.h  iglobalvars.h
src/utilities/: debug.cpp  debug.h  hookmanager.h  input.cpp  input.h  inputhook.cpp  inputhook.h  memory.cpp  memory.h  widgets.cpp  widgets.h
